--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
